# firebuster

./: .gitmodules  Makefile  README.md  TEST.md  pyproject.toml  run_tests.sh
.github/ISSUE_TEMPLATE/: epic.md  feature.md  user-story-x--test-.md  user-story.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
app/: main.py  weather_get_data.py  weather_test.py
app/example_module/: example_function.py
app/services/: ttf_calculator.py
docs/: index.html  style.css
docs/content/posts/: home.md
docs/public/: index.html  index.xml
docs/public/posts/: index.html  index.xml
docs/public/posts/home/: index.html
tests/: test_example.py  test_health.py  test_ttfcalc.py
