[project]
name = "firebuster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.2",
    "frcm",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
frcm = { git = "https://github.com/selabhvl/dynamic-frcm-simple.git" }
